--- a/CodeAnalysisReport/Properties/launchSettings.json
+++ b/CodeAnalysisReport/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "CodeAnalysisReport": {
       "commandName": "Project",
-      "commandLineArgs": "-p \"Academico\" -x \"C:\\CodeAnalysisLog.xml\" -s \"WCF\""
+      "commandLineArgs": "-p \"Academico\" -d \"C:\\Teste\" -s \"WCF\""
     }
   }
 }
