Alteração de transação, alteração na connectionStrings

--- a/CodeAnalysisReport/AppSettings.json
+++ b/CodeAnalysisReport/AppSettings.json
@@ -1,8 +1,5 @@
 {
-  "connection": {
-    "Data Source": "trendsdb01\\desenv2",
-    "Database": "Pubs",
-    "User ID": "sagresadm",
-    "Password": "sagresadm"
+  "ConnectionStrings": {
+    "Default": "Data Source=trendsdb01\\desenv2;Database=Pubs;User ID=sagresadm;Password=sagresadm"
   }
 }
