--- a/CodeAnalysisReport/Properties/launchSettings.json
+++ b/CodeAnalysisReport/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "CodeAnalysisReport": {
       "commandName": "Project",
-      "commandLineArgs": "-p \"Academico\" -d \"C:\\Teste\" -s \"WCF\""
+      "commandLineArgs": "-p \"Academico\" -x \"Academico.Ajax.WebForms.dll.CodeAnalysisLog.xml\" -s \"WebApp\""
     }
   }
 }
