--- a/CodeAnalysisReport/AppSettings.json
+++ b/CodeAnalysisReport/AppSettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=(localdb)\\mssqllocaldb;Database=CodeAnalysis;Trusted_Connection=True"
+    "Default": "Data Source=trendsdb01\\desenv2;Database=Pubs;User ID=sagresadm;Password=sagresadm"
   }
 }
